# FufuReminder

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  USAGE.md  main.py  pyproject.toml  requirements.txt
config/: .env.example  config.json
src/bot/: discord_bot.py
src/commands/: reminder_commands.py
src/config/: logging.py  settings.py
src/database/: connection.py  models.py
src/factories/: reminder_factory.py
src/models/: enums.py  reminder.py  validation.py
src/observers/: reaction_observer.py
src/repositories/: base.py  reminder_repo.py  validation_repo.py
src/services/: notification_service.py  reminder_service.py  scheduler_service.py  validation_service.py
src/strategies/: frequency_strategy.py
tests/: conftest.py
tests/integration/: test_repository_integration.py
tests/unit/: test_base_repository.py  test_discord_bot.py  test_frequency_strategies.py  test_notification_service.py  test_reaction_observer.py  test_reminder_commands.py  test_reminder_factory.py  test_reminder_model.py  test_reminder_repository.py  test_reminder_service.py  test_scheduler_service.py  test_validation_model.py  test_validation_repository.py  test_validation_service.py
